--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.datasource.password=iamroot
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
-
+spring.servlet.multipart.max-file-size=5MB
